[tool.poetry]
name = "event-hub"
version = "0.1.0"
description = "event management"
authors = ["Yuri Machado <ymachado1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
Pillow = "^10.1.0"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
